test/pass/suma.ditto
func main()
    int a := scan();
    int b := scan();
    int c := a + b;
    print(c);
end