test/fail/typecheck/match-case-type.ditto
func main()
    int x := scan();
    match x is 
        case true do
            print(-1);
        otherwise
            print(-1);
    end
end